<resources>
    <string name="app_name">RoboticBase-core XperiaHello</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="settings_cagetogy_broker">MQTT Broker</string>
    <string name="settings_item_mqtt_host_key">host</string>
    <string name="settings_item_mqtt_host_title">Host</string>
    <string name="settings_item_mqtt_host_summary">MQTT Brokerのホスト名</string>
    <string name="settings_item_mqtt_port_key">port</string>
    <string name="settings_item_mqtt_port_title">Port</string>
    <string name="settings_item_mqtt_port_summary">MQTT Brokerのポート(0 ~ 65535)</string>
    <string name="settings_item_mqtt_use_ssl_key">use_ssl</string>
    <string name="settings_item_mqtt_use_ssl_title">Use ssl</string>
    <string name="settings_item_mqtt_use_ssl_summary">MQTT Brokerへの接続時にSSLを利用する</string>
    <string name="settings_item_mqtt_username_key">username</string>
    <string name="settings_item_mqtt_username_title">UserName</string>
    <string name="settings_item_mqtt_username_summary">MQTT Brokerのユーザー名</string>
    <string name="settings_item_mqtt_password_key">password</string>
    <string name="settings_item_mqtt_password_title">Password</string>
    <string name="settings_item_mqtt_password_summary">MQTT Brokerのパスワード</string>
    <string name="settings_item_mqtt_base_topic_key">base_topic</string>
    <string name="settings_item_mqtt_base_topic_title">BaseTopic</string>
    <string name="settings_item_mqtt_base_topic_summary">MQTT Brokerのbase topic</string>

    <string name="settings_category_motion">Motion</string>
    <string name="settings_item_motion_turn_angle_key">turn_angle</string>
    <string name="settings_item_motion_turn_angle_title">Turn Angle</string>
    <string name="settings_item_motion_turn_angle_default">60</string>
    <string name="settings_item_motion_turn_angle_summary">人検知時のロボットの回転角度(0 ~ 180)</string>
    <string name="settings_item_motion_turn_duration_msec_key">turn_duration_msec</string>
    <string name="settings_item_motion_turn_duration_msec_title">Turn Duratio (msec)</string>
    <string name="settings_item_motion_turn_duration_msec_default">2000</string>
    <string name="settings_item_motion_turn_duration_msec_summary">人検知時のロボット回転に要する時間（ミリ秒）</string>
    <string name="settings_item_motion_idol_interval_msec_key">idol_interval_msec</string>
    <string name="settings_item_motion_idol_interval_msec_title">Idol Interval (msec)</string>
    <string name="settings_item_motion_idol_interval_msec_default">5000</string>
    <string name="settings_item_motion_idol_interval_msec_summary">アイドルモーションの間隔（ミリ秒）</string>

    <string name="settings_category_talk">Talk</string>
    <string name="settings_item_talk_greet_message_key">greet_message</string>
    <string name="settings_item_talk_greet_message_title">Greet Message</string>
    <string name="settings_item_talk_greet_message_default">こんにちは！ デモを見ていきませんか？</string>
    <string name="settings_item_talk_greet_message_summary">人検知時にロボットが話すメッセージ</string>
    <string name="settings_item_talk_interval_sec_key">talk_interval_sec</string>
    <string name="settings_item_talk_interval_sec_title">Talk Interval (sec)</string>
    <string name="settings_item_talk_interval_sec_default">15</string>
    <string name="settings_item_talk_interval_sec_summary">人検知時にロボットが話す最短間隔（秒）</string>
    <string name="settings_item_talk_start_demo_message_key">start_demo_message</string>
    <string name="settings_item_talk_start_demo_message_title">Start Demo Message</string>
    <string name="settings_item_talk_start_demo_message_default">お好きなボタンを押してください</string>
    <string name="settings_item_talk_start_demo_message_summary">デモ開始時にロボットが話すメッセージ</string>
    <string name="settings_item_talk_triangle_message_key">triangle_message</string>
    <string name="settings_item_talk_triangle_message_title">Triangle Message</string>
    <string name="settings_item_talk_triangle_message_default">誘導ロボットを三角に動かします</string>
    <string name="settings_item_talk_triangle_message_summary">△ボタン押下時にロボットが話すメッセージ</string>
    <string name="settings_item_talk_square_message_key">square_message</string>
    <string name="settings_item_talk_square_message_title">Square Message</string>
    <string name="settings_item_talk_square_message_default">誘導ロボットを四角く動かします</string>
    <string name="settings_item_talk_square_message_summary">□ボタン押下時にロボットが話すメッセージ</string>
    <string name="settings_item_talk_circle_message_key">circle_message</string>
    <string name="settings_item_talk_circle_message_title">Circle Message</string>
    <string name="settings_item_talk_circle_message_default">誘導ロボットを丸く動かします</string>
    <string name="settings_item_talk_circle_message_summary">◯ボタン押下時にロボットが話すメッセージ</string>
    <string name="settings_item_talk_cross_message_key">cross_message</string>
    <string name="settings_item_talk_cross_message_title">Cross Message</string>
    <string name="settings_item_talk_cross_message_default">誘導ロボットを停止します</string>
    <string name="settings_item_talk_cross_message_summary">✕ボタン押下時にロボットが話すメッセージ</string>
    <string name="settings_item_talk_do_forward_message_key">do_forward_message</string>
    <string name="settings_item_talk_do_forward_message_title">Do forward Message</string>
    <string name="settings_item_talk_do_forward_message_default">目的地へ向かいます</string>
    <string name="settings_item_talk_do_forward_message_summary">ロボットが話すメッセージ</string>

    <string name="main_title">RoboticBase</string>
    <string name="description">目的地を選択してください</string>
    <string name="main_button">デモを\n始める</string>
    <string name="triangle_button">\u25B3</string>
    <string name="square_button">\u25a2</string>
    <string name="circle_button">\u25EF</string>
    <string name="cross_button">\u2613</string>
</resources>
