<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_cagetogy_broker">
        <EditTextPreference
            android:key="@string/settings_item_mqtt_host_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_mqtt_host_title"
            android:summary="@string/settings_item_mqtt_host_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_mqtt_port_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_mqtt_port_title"
            android:inputType="number"
            android:summary="@string/settings_item_mqtt_port_summary"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/settings_item_mqtt_use_ssl_key"
            android:title="@string/settings_item_mqtt_use_ssl_title"
            android:summary="@string/settings_item_mqtt_use_ssl_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_mqtt_username_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_mqtt_username_title"
            android:summary="@string/settings_item_mqtt_username_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_mqtt_password_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_mqtt_password_title"
            android:summary="@string/settings_item_mqtt_password_summary"
            android:inputType="textPassword"/>
        <EditTextPreference
            android:key="@string/settings_item_mqtt_base_topic_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_mqtt_base_topic_title"
            android:summary="@string/settings_item_mqtt_base_topic_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_motion">
        <EditTextPreference
            android:key="@string/settings_item_motion_turn_angle_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_motion_turn_angle_title"
            android:inputType="number"
            android:defaultValue="@string/settings_item_motion_turn_angle_default"
            android:summary="@string/settings_item_motion_turn_angle_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_motion_turn_duration_msec_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_motion_turn_duration_msec_title"
            android:inputType="number"
            android:defaultValue="@string/settings_item_motion_turn_duration_msec_default"
            android:summary="@string/settings_item_motion_turn_duration_msec_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_motion_idol_interval_msec_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_motion_idol_interval_msec_title"
            android:inputType="number"
            android:defaultValue="@string/settings_item_motion_idol_interval_msec_default"
            android:summary="@string/settings_item_motion_idol_interval_msec_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_talk">
        <EditTextPreference
            android:key="@string/settings_item_talk_greet_message_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_talk_greet_message_title"
            android:defaultValue="@string/settings_item_talk_greet_message_default"
            android:summary="@string/settings_item_talk_greet_message_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_talk_interval_sec_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_talk_interval_sec_title"
            android:inputType="number"
            android:defaultValue="@string/settings_item_talk_interval_sec_default"
            android:summary="@string/settings_item_talk_interval_sec_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_talk_start_demo_message_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_talk_start_demo_message_title"
            android:defaultValue="@string/settings_item_talk_start_demo_message_default"
            android:summary="@string/settings_item_talk_start_demo_message_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_talk_triangle_message_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_talk_triangle_message_title"
            android:defaultValue="@string/settings_item_talk_triangle_message_default"
            android:summary="@string/settings_item_talk_triangle_message_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_talk_square_message_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_talk_square_message_title"
            android:defaultValue="@string/settings_item_talk_square_message_default"
            android:summary="@string/settings_item_talk_square_message_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_talk_circle_message_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_talk_circle_message_title"
            android:defaultValue="@string/settings_item_talk_circle_message_default"
            android:summary="@string/settings_item_talk_circle_message_summary"/>
        <EditTextPreference
            android:key="@string/settings_item_talk_cross_message_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_item_talk_cross_message_title"
            android:defaultValue="@string/settings_item_talk_cross_message_default"
            android:summary="@string/settings_item_talk_cross_message_summary"/>
    </PreferenceCategory>

</PreferenceScreen>